RchivalTag versions

upcoming:
	- add argument "show_time_limits" in plot_TS/DepthTS

RchivalTag_0.1.6 -- September 11, 2023 (Robert Bauer)
	- fixing minor bugs to resubmit most current package version to CRAN

RchivalTag_0.1.5 -- August 27, 2020 (Robert Bauer)
	- added new ggboxplot_DepthTS_by_hour function
        - added argument tz to illustrate data in prefered time zone in the functions: plot_DepthTS function family, dy_DepthTS, ggboxplot_DepthTS_by_hour
        - fixed tstep issues in read_histos
        - added simulate_DepthTS function

RchivalTag_0.1.4 -- August 27, 2020 (Robert Bauer)
        - added ggplot_geopos function, replacing former function plot_geopos
	- added ggplotly_geopos function
	- added leaflet_geopos function

RchivalTag_0.1.3 -- July 20, 2020 (Robert Bauer)
        - added plot_data_coverage
	      - added some additional arguments to hist_tad and hist_tat

RchivalTag_0.1.2 -- June 17, 2020 (Robert Bauer)
        - added dygraph version of plot_DepthTS

RchivalTag_0.1.1 -- February 7, 2020 (Robert Bauer)
        - added min_perc argument in hist_tad, hist_tat and ts2histos-function to define a minimum data coverage for histogram entries obtained through time series data.
        - added new function read_TS to read in time series data
        - added new functions plotDepthTempTS, plotDepthTempTS_resampled, plotDepthTempTS_resampled_PDT to plot depth-temperature time series data with colorized temperature values (or alternative y and z-variables)
        - added new function resample_PDT and resample_TS to resample temperature time series data or PDT data (e.g. to facilitate plotDepthTempTS plots)

RchivalTag_0.1.0 -- October 30, 2019 (Robert Bauer)
        - fixed daytime rendering problem in classify_DayTime, plot_TS and plot_DepthTS

RchivalTag_0.0.9 -- September 16, 2018 (Robert Bauer)
        - added cex.main, cex.lab, cex.axis, cex.axis2 arguments to plot_TS, plot_DepthTS and empty.plot_TS functions