@@ -1,19 +1,19 @@
 Package: RchivalTag
 Type: Package
 Title: Analyzing and Interactive Visualization of Archival Tagging Data
-Version: 0.1.6
-Date: 2023-09-11
+Version: 0.1.7
+Date: 2023-09-22
 Author: Robert K. Bauer
 Maintainer: Robert K. Bauer <rkbauer@hawaii.edu>
 Description: A set of functions to generate, access and analyze standard data products from archival tagging data.
-Depends: R (>= 3.5.0), maps, mapdata
-Imports: plyr, maptools, graphics, stats, raster, readr, rgeos, ncdf4,
-        pracma, dygraphs, xts, lubridate, shiny, htmlwidgets, stringr,
-        grDevices, oceanmap, sp, methods, PBSmapping, ggplot2, ggedit,
+Depends: R (>= 3.5.0), maps
+Imports: plyr, cleangeo, suntools, graphics, stats, raster, readr,
+        ncdf4, pracma, dygraphs, xts, lubridate, shiny, htmlwidgets,
+        stringr, grDevices, oceanmap, sp, methods, ggplot2, ggedit,
         plotly, leaflet, leaflet.extras2, sf
 License: GPL (>= 3)
 LazyLoad: yes
-Packaged: 2023-09-11 23:34:52 UTC; work
+Packaged: 2023-09-22 20:10:52 UTC; work
 Repository: CRAN
-Date/Publication: 2023-09-12 08:50:11 UTC
+Date/Publication: 2023-09-22 20:40:02 UTC
 NeedsCompilation: no
