@@ -3,10 +3,9 @@
 import("grDevices")
 import("utils")
 import("maps")
-import("mapdata")
-import("maptools")
+import("cleangeo")
+import("suntools")
 import("raster",except=c(lines,barplot,image,hist,boxplot,text,plot))
-import("rgeos", except=c(plot))
 import("dygraphs")
 import("sf")
 import("xts")
@@ -22,7 +21,6 @@ importFrom("lubridate", "yday")
 importFrom("pracma", "Mode")
 importFrom("stats", "approx")
 importFrom("methods", "is")
-import("PBSmapping")
 importFrom("plyr",ddply)
 importFrom("stats", "median", "sd", "spline")
 import("graphics", except=c(layout,pairs,persp,contour))
