@@ -3,6 +3,10 @@ RchivalTag versions
 upcoming:
 	- add argument "show_time_limits" in plot_TS/DepthTS
 
+RchivalTag_0.1.7 -- September 22, 2023 (Robert Bauer)
+	- dependencies to discontinued maptools and rgeos have been removed
+        - non required packages have been removed from NAMESPACE
+
 RchivalTag_0.1.6 -- September 11, 2023 (Robert Bauer)
 	- fixing minor bugs to resubmit most current package version to CRAN
 
